--- a/css/style.css
+++ b/css/style.css
@@ -11,15 +11,16 @@ body{
 }
 
 .menu{
-    width: 30%;
+    width: 20%;
     height: 80vh;
     background-color: burlywood;
 
 }
 
 .contenedor{
-    width: 70%;
+    width: 80%;
     height: 80vh;
+    background-color: black;
 }
 
 .reproductor{
@@ -30,16 +31,65 @@ body{
 
 .buscador{
     width: 100%;
-    height: 20%;
-    background-color: aquamarine;
+    height: 10%;
+    background-color: black;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: center;
+
 }
 
 .contenido{
     width: 100%;
-    height: 80%;
+    height: 90%;
     display: flex;
+    background-color: black;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
     overflow-y: scroll;
+    padding: 15px;
+}
+
+.card{
+    margin: 5px;
+    display: flex;
+    flex-direction: row;
+}
+
+.imgStyle{
+    width: 100px!important;
+    height: 100%!important;
+}
+
+.cardStyle{
+    background-color: black;
+    display: flex;
+    flex-direction: column;
+    padding-top: 5px;
+}
+
+.songmame{
+    font-size: 1rem;
+    font-weight: 600;
+    color: white;
+}
+
+.artistname{
+    font-size: 0.8rem;
+    font-weight: 400;
+    color: white;
+}
+
+.inputBuscador{
+    background-color: #858585;
+    width: 70%;
+    border-radius: 10px;
+}
+
+.iconoBuscar{
+    margin-left: 10px;
+    color: white;
 }
